# ERP_OPENCLAW

./: .env  .env.example  .gitignore  Makefile  README.md  README.txt  pyproject.toml  requirements.txt  start_web.py
agent.egg-info/: SOURCES.txt
docs/: api-chat-history-analysis.md
frontend/: package-lock.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: chat.js
frontend/src/components/: ChatArea.vue  InputArea.vue  InterruptBanner.vue  MarkdownRenderer.vue  MessageItem.vue  Sidebar.vue  ToolCallPanel.vue
scripts/: check_environment.py
src/agent/: __init__.py  config.py  env_utils.py  log_utils.py  main_agent.py  mcp_tools_bean.py  middleware_config.py  scheam.py
src/agent/backends/: custom_opensandbox.py  sandbox_manager.py  sandbox_proxy.py  sandbox_setup.py
src/agent/memory/: AGENTS.md  prompts.py
src/agent/middlewares/: context_injection.py  memory_update.py  sandbox_breaker.py  sandbox_health.py  skills_sync.py  tool_error.py  tools_summarization.py  user_skills_restore.py
src/agent/subagents/: loader.py
src/agent/subagents/configs/: procurement_analyst.yaml
src/agent/tools/: assign_skill.py  chart_generator.py  download_sandbox_file.py  hitl_tools.py  mcp_client.py  web_search.py
src/api_view/: agent_loader.py  web_config.py  web_main.py
src/api_view/api/: chat.py  history.py
src/mcp_server/: http_base.py  result_utils.py  server_config.py  server_main.py
src/mcp_server/tools/: inventory_tools.py  order_tools.py  parts_tools.py  suppliers_tools.py
src/skills/main/skill-management/: SKILL.md
src/skills/procurement/procurement-analysis/: SKILL.md
src/skills/procurement/web-content-fetcher/: fetch_content.py
src/skills/procurement/web-scraper/: scrape_page.py
tests/: test_custom_opensandbox.py  test_mcp_result_utils.py  test_tool_error.py
