[project]
name = "agent"
version = "0.0.1"
description = "ERP procurement assistant built with LangGraph, DeepAgents, FastAPI and MCP."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "deepagents>=0.4.12,<0.5",
    "fastapi>=0.115,<1.1",
    "fastmcp>=3.2.4,<4",
    "httpx>=0.28,<0.29",
    "langchain>=1.2.13,<2",
    "langchain-mcp-adapters>=0.2.2,<0.3",
    "langchain-openai>=1.1.12,<2",
    "langgraph>=1.1.3,<2",
    "langgraph-checkpoint-mongodb>=0.2,<0.4",
    "loguru>=0.7,<0.8",
    "opensandbox>=0.1.7,<0.2",
    "pymongo>=4.10,<5",
    "python-dotenv>=1.2,<2",
    "pyyaml>=6,<7",
    "requests>=2.32,<3",
    "beautifulsoup4>=4.12,<5",
    "uvicorn[standard]>=0.30,<1",
    "zai-sdk>=0.2.2,<0.3",
]


[project.optional-dependencies]
dev = [
    "anyio>=4.7",
    "mypy>=1.11.1",
    "pytest>=9",
    "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*", "api_view*", "mcp_server*"]


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.14",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "ruff>=0.8.2",
]
